--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: 3.7
+
+    - name: Install dependencies & Convert README
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        m2r README.md
+
+    - name: Move README.rst & Build sphinx documentation
+      run: |
+        mv README.rst docs/source
+        cd docs
+        make html
+        
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -21,6 +34,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
+        
     - name: Lint with flake8
       run: |
         conda install flake8
