--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ scikit-learn~=1.0.1
 matplotlib~=3.5.0
 seaborn~=0.11.2
 m2r~=0.2.1
+mistune==2.0.2
+pyqt5<5.13
+pyqtwebengine<5.13
+jedi==0.17.2
+parso==0.7.0
