--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements.txt
         m2r README.md
 
-    - name: Move README.rst & Build sphinx documentation
+    - name: Build sphinx documentation
       run: |
         cd docs
         make html
