--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,10 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install dependencies & Convert README
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        m2r README.md
 
     - name: Build sphinx documentation
       run: |
