--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ pandas~=1.3.4
 scikit-learn~=1.0.1
 matplotlib~=3.5.0
 seaborn~=0.11.2
+m2r
 mistune==2.0.2
 pyqt5<5.13
 pyqtwebengine<5.13
 jedi==0.17.2
 parso==0.7.0
+sphinx
