--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda update --file test.yml --name base
+        conda update --file environment.yml --name base
         
     - name: Lint with flake8
       run: |
